SERVER-65382 Don't use clientReadable in AutoSplitVector when reordering shard key fields

(cherry picked from commit 56dab5c0dcfbebcc2f5910a82f78dd4678620532)